--- a/Debug/makefile
+++ b/Debug/makefile
@@ -64,8 +64,8 @@ all: main-build
 main-build: HSM.elf secondary-outputs
 
 # Tool invocations
-HSM.elf HSM.map: $(OBJS) $(USER_OBJS) C:\Users\saman\Desktop\Cyber\HSM\HSM\STM32F407VGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "HSM.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\saman\Desktop\Cyber\HSM\HSM\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="HSM.map" -Wl,--gc-sections -static -L"C:\Users\saman\Desktop\Cyber\Library\en.STM32CubeExpansion_Crypto\STM32CubeExpansion_Crypto_V4.1.0\Middlewares\ST\STM32_Cryptographic\lib" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+HSM.elf HSM.map: $(OBJS) $(USER_OBJS) C:\Users\saman\Desktop\HSM\STM32F407VGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "HSM.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\saman\Desktop\HSM\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="HSM.map" -Wl,--gc-sections -static -L"C:\Users\saman\Desktop\Cyber\Library\en.STM32CubeExpansion_Crypto\STM32CubeExpansion_Crypto_V4.1.0\Middlewares\ST\STM32_Cryptographic\lib" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
