--- a/Debug/makefile
+++ b/Debug/makefile
@@ -38,34 +38,34 @@ $(wildcard ../makefile.init) \
 $(wildcard ../makefile.targets) \
 
 
-BUILD_ARTIFACT_NAME := HSM
+BUILD_ARTIFACT_NAME := SecureX
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX :=
 BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME)$(if $(BUILD_ARTIFACT_EXTENSION),.$(BUILD_ARTIFACT_EXTENSION),)
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-HSM.elf \
+SecureX.elf \
 
 MAP_FILES += \
-HSM.map \
+SecureX.map \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-HSM.list \
+SecureX.list \
 
 
 # All Target
 all: main-build
 
 # Main-build Target
-main-build: HSM.elf secondary-outputs
+main-build: SecureX.elf secondary-outputs
 
 # Tool invocations
-HSM.elf HSM.map: $(OBJS) $(USER_OBJS) D:\University\ courses\Fourth\ semester\Cyber\Project\Cyber\HSM\STM32F407VGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "HSM.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"D:\University courses\Fourth semester\Cyber\Project\Cyber\HSM\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="HSM.map" -Wl,--gc-sections -static -L../X-CUBE-CRYPTOLIB/Middlewares/ST/STM32_Cryptographic/lib --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+SecureX.elf SecureX.map: $(OBJS) $(USER_OBJS) D:\University\ courses\Fourth\ semester\Cyber\Project\Cyber\SecureX\STM32F407VGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "SecureX.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"D:\University courses\Fourth semester\Cyber\Project\Cyber\SecureX\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="SecureX.map" -Wl,--gc-sections -static -L../X-CUBE-CRYPTOLIB/Middlewares/ST/STM32_Cryptographic/lib --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -74,14 +74,14 @@ default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-HSM.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "HSM.list"
+SecureX.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "SecureX.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) HSM.elf HSM.list HSM.map default.size.stdout
+	-$(RM) SecureX.elf SecureX.list SecureX.map default.size.stdout
 	-@echo ' '
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
